# lipic-js

./: .gitignore  CLEAN_ROOM.md  LICENSE  README.md  fixes for scale phase 2.md  fixes for scale.md  lipic-js-0.1.0.tgz  package-lock.json  package.json  plan.md  publish.sh  rust migration plan.md  scripts-languages-mapping.md  sys-struct.md  tsconfig.json  tsup.config.js
.github/workflows/: deploy-playground.yml  static.yml
docs/: behavior-spec.md  mobile-ime-test-matrix.md
docs/perf/: baseline.1770377177051.json  baseline.1770377188956.json  baseline.1770377252309.json  baseline.1770377271573.json  baseline.1770377275445.json  baseline.1770377453025.json  baseline.1770377560777.json  baseline.1770377580511.json  baseline.1770377711605.json  baseline.1770377816898.json  index.html  (+5 more)
playground/: README.md  TEST_MATRIX.md  index.html  main.js
rust-core/: Cargo.toml
rust-core/src/: language_pack.rs  lib.rs  trie.rs
src/: index.ts
tests/: contenteditable-edit.test.ts  devanagari-base-coverage.test.ts  devanagari-schemes.test.ts  dom-integrator.test.ts  hindi.smoke.test.ts  input-interceptor.test.ts  input-stack.test.ts  marathi.extensive.test.ts  rules.ligature.test.ts  rules.nasalization.test.ts  rules.nukta.test.ts  rules.schwa.test.ts  transliteration-engine.backspace.test.ts  transliteration-engine.preedit.test.ts  transliteration-engine.test.ts  transliteration-engine.uppercase-paste.test.ts  trie.test.ts
tools/: benchmark-engines.mjs  copy-wasm-to-dist.mjs  generate-language-maps-from-common-maps.mjs  generate-map.js  print-inventory.js  report-size.mjs
(+109 files in other folders)
