[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.101"
hashbrown = "0.16.1"
js-sys = "0.3.85"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.149"
thiserror = "2.0.18"
unicode-segmentation = "1.12.0"
wasm-bindgen = "0.2.108"
web-sys = "0.3.85"

[dev-dependencies]
criterion = "0.8.2"
proptest = "1.10.0"
wasm-bindgen-test = "0.3.58"
